[package]
name = "bike_decoder"
version = "0.1.2"
edition = "2021"
description = "Rust implementation of a BGF decoder for QC-MDPC codes"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
clap = { version = "4.0", features = ["derive"] }
derive_builder = "0.12"
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = "1.4.0"
num = "0.4"
num_cpus = "1.14"
num-integer = "0.1"
petgraph = "0.6"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.6.1"
safe_arch = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
