[package]
name = "bike_decoder"
version = "0.1.3"
edition = "2021"
description = "Rust implementation of a BGF decoder for QC-MDPC codes"
license = "MIT"

[dependencies]
anyhow = "1.0.67"
bytecount = { version = "0.6.3", features = ["runtime-dispatch-simd"] }
bytemuck = "1.12.3"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5.6"
derive_builder = "0.12"
getset = "0.1.2"
hex = { version = "0.4.3", features = ["serde"] }
num = "0.4.0"
num_cpus = "1.14"
once_cell = "1.16.0"
petgraph = "0.6"
rand = "0.8.5"
rand_xoshiro = "0.6"
rayon = "1.6.1"
safe_arch = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
incremental = true

[profile.test]
opt-level = 2
incremental = true

[profile.bench]
incremental = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
