[package]
name = "absorbing"
version = "0.1.0"
edition = "2021"
description = "Analysis of absorbing sets for QC-MDPC codes"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
bike_decoder = { path = "../bike_decoder" }
clap = { version = "4.0.32", features = ["derive"] }
getset = "0.1.2"
itertools = "0.10.5"
num-integer = "0.1.45"
petgraph = "0.6.2"
rand = "0.8.5"
rayon = "1.6.1"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
