[package]
name = "absorbing"
version = "0.1.0"
edition = "2021"
description = "Analysis of absorbing sets for QC-MDPC codes"
license = "MIT"

[dependencies]
anyhow = "1"
bike-decoder = { path = "../bike-decoder" }
clap = { version = "4", features = ["derive"] }
itertools = "0.10"
malachite = "0.3.2"
rand = "0.8"
rayon = "1.6"
serde = "1"
serde_json = "1"
