[package]
name = "bike-analysis"
version = "0.1.0"
edition = "2021"
description = "Data analysis utilities for QC-MDPC codes"
license = "MIT"

[dependencies]
anyhow = "1"
bike-decoder = { path = "../bike-decoder" }
clap = { version = "4", features = ["derive"] }
itertools = "0.10"
malachite = "0.3.2"
rand = "0.8"
rayon = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
