[package]
name = "bike-decoder"
version = "0.1.3"
edition = "2021"
description = "Libraries for a BGF decoder for QC-MDPC codes"
license = "MIT"
rust-version = "1.66"

[dependencies]
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
bytemuck = "1.12.3"
clap = { version = "4", default-features = false }
getset = "0.1"
hex = { version = "0.4", features = ["serde"] }
konst = { version = "0.3", default-features = false, features = ["parsing"] }
malachite = "0.3.2"
once_cell = "1.16"
petgraph = "0.6"
rand = "0.8"
rand_xoshiro = "0.6"
safe_arch = { version = "0.6", features = ["bytemuck"] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2", default-features = false, features = ["macros"] }
thiserror = "1.0.38"

[dev-dependencies]
criterion = "0.4"
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
