[package]
name = "bike_decoder"
version = "0.1.3"
edition = "2021"
description = "Libraries for a BGF decoder for QC-MDPC codes"
license = "MIT"
rust-version = "1.66"

[dependencies]
bytecount = { version = "0.6.3", features = ["runtime-dispatch-simd"] }
bytemuck = "1.12.3"
clap = { version = "4.0", features = ["derive"] }
getset = "0.1.2"
hex = { version = "0.4.3", features = ["serde"] }
num = "0.4.0"
once_cell = "1.16.0"
rand = "0.8.5"
rand_xoshiro = "0.6"
safe_arch = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
