[package]
name = "bike_trials"
version = "0.1.3"
edition = "2021"
description = "Rust implementation of a BGF decoder for QC-MDPC codes"
license = "MIT"

[dependencies]
bike_decoder = { path = "../bike_decoder" }
anyhow = "1.0.67"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5.6"
derive_builder = "0.12"
getset = "0.1.2"
num = "0.4.0"
num_cpus = "1.14"
rand = "0.8.5"
rayon = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
