[package]
name = "bike_trials"
version = "0.1.3"
edition = "2021"
description = "Rust implementation of a BGF decoder for QC-MDPC codes"
license = "MIT"

[dependencies]
bike_decoder = { path = "../bike_decoder" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
derive_builder = "0.12"
getset = "0.1"
num_cpus = "1"
rand = "0.8"
rayon = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
thiserror = "1.0.38"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
