[package]
name = "ncw-classify"
version = "0.1.0"
edition = "2021"
description = "Classify BIKE decoding failures into near-codeword sets"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
bike_decoder = { path = "../bike_decoder" }
clap = { version = "4.0.32", features = ["derive"] }
rand = "0.8.5"
rayon = "1.6.1"
serde = "1.0.152"
serde_json = "1.0.91"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
