[package]
name = "ncw-classify"
version = "0.1.0"
edition = "2021"
description = "Classify BIKE decoding failures into near-codeword sets"
license = "MIT"

[dependencies]
anyhow = "1"
bike_decoder = { path = "../bike_decoder" }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rayon = "1.6"
serde = "1"
serde_json = "1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
